@@ -1,7 +1,8 @@
 package com.example.ec_2024b_back.auth.domain.models;
 
 import com.example.ec_2024b_back.auth.AccountId;
-import com.google.common.collect.ImmutableList;
+import java.util.ArrayList;
+import java.util.List;
 import java.util.UUID;
 import lombok.AccessLevel;
 import lombok.Getter;
@@ -13,18 +14,18 @@ import org.jmolecules.event.types.DomainEvent;
 @RequiredArgsConstructor(access = AccessLevel.PRIVATE)
 public class Account implements AggregateRoot<Account, AccountId> {
   private final AccountId id;
-  private final ImmutableList<Authentication> authentications;
-  private final ImmutableList<DomainEvent> domainEvents;
+  private final List<Authentication> authentications;
+  private final List<DomainEvent> domainEvents;
 
-  public static Account create(UUID accountId, ImmutableList<Authentication> authentications) {
+  public static Account create(UUID accountId, List<Authentication> authentications) {
     return new Account(
         new AccountId(accountId),
-        authentications,
-        ImmutableList.of(new AccountRegistered(accountId.toString())));
+        new ArrayList<>(authentications),
+        List.of(new AccountRegistered(accountId.toString())));
   }
 
-  public static Account reconstruct(AccountId id, ImmutableList<Authentication> authentications) {
-    return new Account(id, authentications, ImmutableList.of());
+  public static Account reconstruct(AccountId id, List<Authentication> authentications) {
+    return new Account(id, new ArrayList<>(authentications), new ArrayList<>());
   }
 
   public record AccountRegistered(String accountId) implements DomainEvent {}
