@@ -13,7 +13,7 @@ import com.example.ec_2024b_back.auth.application.workflow.LoginWorkflow.VerifyW
 import com.example.ec_2024b_back.auth.domain.models.Account;
 import com.example.ec_2024b_back.auth.domain.models.JsonWebToken;
 import com.example.ec_2024b_back.share.domain.models.Email;
-import com.google.common.collect.ImmutableList;
+import java.util.List;
 import java.util.UUID;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -50,7 +50,7 @@ class LoginWorkflowTest {
     var email = new Email(emailStr);
     var password = "pass";
     var uuid = UUID.fromString("758c0389-b861-443f-98b2-f4c8ac89d1f4");
-    var account = Account.reconstruct(new AccountId(uuid), ImmutableList.of());
+    var account = Account.reconstruct(new AccountId(uuid), List.of());
     var jwt = new JsonWebToken("jwt-token");
 
     when(findAccountByEmailStep.apply(any(Context.Input.class)))
@@ -87,7 +87,7 @@ class LoginWorkflowTest {
     var email = new Email(emailStr);
     var password = "wrong";
     var uuid = UUID.fromString("758c0389-b861-443f-98b2-f4c8ac89d1f4");
-    var account = Account.reconstruct(new AccountId(uuid), ImmutableList.of());
+    var account = Account.reconstruct(new AccountId(uuid), List.of());
 
     when(findAccountByEmailStep.apply(any(Context.Input.class)))
         .thenReturn(Mono.just(new Context.Founded(account, password)));
@@ -104,7 +104,7 @@ class LoginWorkflowTest {
     var email = new Email(emailStr);
     var password = "pass";
     var uuid = UUID.fromString("758c0389-b861-443f-98b2-f4c8ac89d1f4");
-    var account = Account.reconstruct(new AccountId(uuid), ImmutableList.of());
+    var account = Account.reconstruct(new AccountId(uuid), List.of());
 
     when(findAccountByEmailStep.apply(any(Context.Input.class)))
         .thenReturn(Mono.just(new Context.Founded(account, password)));
