@@ -12,7 +12,7 @@ import com.example.ec_2024b_back.auth.application.workflow.SignupWorkflow.EmailA
 import com.example.ec_2024b_back.auth.domain.models.Account;
 import com.example.ec_2024b_back.share.domain.models.Email;
 import com.example.ec_2024b_back.utils.Fast;
-import com.google.common.collect.ImmutableList;
+import java.util.List;
 import java.util.UUID;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -49,7 +49,7 @@ class SignupWorkflowTest {
     var email = new Email(emailStr);
     var password = "password";
     var uuid = UUID.randomUUID();
-    var expectedAccount = Account.reconstruct(new AccountId(uuid), ImmutableList.of());
+    var expectedAccount = Account.reconstruct(new AccountId(uuid), List.of());
 
     when(checkExistsEmailStep.apply(any(Context.Input.class)))
         .thenReturn(Mono.just(new Context.Checked(email, password)));
